feat: complete Phase 1.1 project scaffold
- Initialize NestJS project with TypeScript strict mode
- Configure ESLint with no-explicit-any:error, no-console:warn
- Configure Prettier (singleQuote, semi, 100 width)
- Configure TypeORM with PostgreSQL 15
- Update docker-compose with healthcheck and proper env vars
- Create .env.example with all required variables
- Verify database connection works

Phase 1.1 tasks completed: 1.1.1 through 1.1.7

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,37 @@
 services:
   easytax-au-db:
     image: postgres:15-alpine
-    restart: always
+    container_name: easytax-au-db
+    restart: unless-stopped
     environment:
-      POSTGRES_DB: easytax-au
-      POSTGRES_PASSWORD: ${DB_PASSWORD}
+      POSTGRES_DB: ${DB_NAME:-easytax-au}
+      POSTGRES_USER: ${DB_USERNAME:-postgres}
+      POSTGRES_PASSWORD: ${DB_PASSWORD:?DB_PASSWORD is required}
+    ports:
+      - '${DB_PORT:-5432}:5432'
     volumes:
       - ./pgdata:/var/lib/postgresql/data
+    healthcheck:
+      test: ['CMD-SHELL', 'pg_isready -U ${DB_USERNAME:-postgres} -d ${DB_NAME:-easytax-au}']
+      interval: 10s
+      timeout: 5s
+      retries: 5
     networks:
       - easytax-au-network
 
   easytax-au-api:
     build: .
+    container_name: easytax-au-api
     ports:
-      - '3000:3000'
+      - '${PORT:-3000}:3000'
     env_file: .env
+    environment:
+      DB_HOST: easytax-au-db
     volumes:
-      - ./data:/app/data:ro # Read-only access to your source CSVs
+      - ./data:/app/data:ro
     depends_on:
-      - easytax-au-db
+      easytax-au-db:
+        condition: service_healthy
     networks:
       - easytax-au-network
 
