Refactor code structure for improved readability and maintainability. feat(web): add generated OpenAPI types and typed BAS client
- generate shared/types/api.d.ts via openapi-typescript using /api/docs-json
- wire @api-types alias into web tsconfig and api-client
- add typed getBasSummary helper and tests using BasSummaryDto
- keep backend tsconfig from compiling web/ in Nest watch mode

--- a/web/tsconfig.app.json
+++ b/web/tsconfig.app.json
@@ -13,9 +13,10 @@
     "moduleDetection": "force",
     "noEmit": true,
     "jsx": "react-jsx",
-    "baseUrl": "./src",
+    "baseUrl": ".",
     "paths": {
-      "@/*": ["*"]
+      "@/*": ["src/*"],
+      "@api-types": ["../shared/types/api.d.ts"]
     },
     "strict": true,
     "noUnusedLocals": true,
