--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,6 @@
     "strictBindCallApply": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src"],
+  "include": ["src", "test"],
   "exclude": ["node_modules", "dist", "web"]
 }
