fix(ci): use correct database environment variables
Backend expects DB_HOST, DB_USERNAME, DB_PASSWORD, DB_NAME instead of DATABASE_URL.
This fixes the 'role "root" does not exist' PostgreSQL error.

The backend's database.config.ts uses individual env vars:
- DB_HOST (default: localhost)
- DB_PORT (default: 5432)
- DB_USERNAME (default: postgres)
- DB_PASSWORD (default: postgres)
- DB_NAME (default: easytax-au)

Updated workflow to match backend configuration.

--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -63,7 +63,11 @@ jobs:
           echo $! > backend.pid
         env:
           NODE_ENV: test
-          DATABASE_URL: postgresql://easytax:easytax_dev@localhost:5432/easytax_au
+          DB_HOST: localhost
+          DB_PORT: 5432
+          DB_USERNAME: easytax
+          DB_PASSWORD: easytax_dev
+          DB_NAME: easytax_au
           ENCRYPTION_KEY: ${{ secrets.ENCRYPTION_KEY || '0123456789abcdef0123456789abcdef0123456789abcdef0123456789abcdef' }}
 
       - name: Wait for backend to be ready
